@@ -45,25 +45,19 @@ recommend this.
 
 \subsubsection{Chip design and terminology}
 
-The 450k array has a complicated design.  What follows is a quick
-overview.
+The 450k array has a complicated design.  What follows is a quick overview.
 
-Each sample is measured on a single array, in two different color
-channels (red and green).  Each array measures roughly 450,000 CpG
-positions.  Each CpG is associated with two measurements: a methylated
-measurement and an ``un''-methylated measurement.  These two values
-can be measured in one of two ways: using a ``Type I'' design or a
-``Type II design''.  CpGs measured using a Type I design are measured
-using a single color, with two different probes in the same color
-channel providing the methylated and the unmethylated measurements.
-CpGs measured using a Type II design are measured using a single
-probe, and two different colors provide the methylated and the
-unmethylated measurements.  Practically, this implies that on this
-array there is \emph{not} a one-to-one correspondence between probes
-and CpG positions.  We have therefore tried to be precise about this
-and we refer to a ``methylation position'' (or ``CpG'') when we refer
-to a single-base genomic locus.  The previous generation 27k
-methlation array uses only the Type I design.
+Each sample is measured on a single array, in two different color channels (red and green).  Each
+array measures roughly 450,000 CpG positions.  Each CpG is associated with two measurements: a
+methylated measurement and an ``un''-methylated measurement.  These two values can be measured in
+one of two ways: using a ``Type I'' design or a ``Type II design''.  CpGs measured using a Type I
+design are measured using a single color, with two different probes in the same color channel
+providing the methylated and the unmethylated measurements.  CpGs measured using a Type II design
+are measured using a single probe, and two different colors provide the methylated and the
+unmethylated measurements.  Practically, this implies that on this array there is \emph{not} a
+one-to-one correspondence between probes and CpG positions.  We have therefore tried to be precise
+about this and we refer to a ``methylation position'' (or ``CpG'') when we refer to a single-base
+genomic locus.  The previous generation 27k methlation array uses only the Type I design.
 
 In this package we refer to differentially methylated positions (DMPs) by which we mean a single
 genomic position that has a different methylation level in two different groups of samples (or
@@ -378,7 +372,41 @@ know the reference array we can recreate Genome Studio exactly.  Background subt
 remaining 6 out of 24 arrays we only see small discrepancies (a per-array max difference of 1-4 for
 unlogged intensities).  A script for doing this is in \texttt{scripts/GenomeStudio.R}.
 
+\subsubsection{Subset-quantile within array normalisation (SWAN)}
 
+SWAN (subset-quantile within array normalisation) is a new normalization method for Illumina 450k
+arrays.  What follows is a brief description of the methodology (written by the authors of SWAN):
+
+Technical differences have been demonstrated to exist between the Type I and Type II assay designs
+within a single 450K array\cite{Bibikova:2011,Dedeurwaerder:2011}. Using the SWAN method
+substantially reduces the technical variability between the assay designs whilst maintaining the
+important biological differences.  The SWAN method makes the assumption that the number of CpGs
+within the 50bp probe sequence reflects the underlying biology of the region being
+interrogated. Hence, the overall distribution of intensities of probes with the same number of CpGs
+in the probe body should be the same regardless of design type. The method then uses a subset
+quantile normalization approach to adjust the intensities of each array \cite{Maksimovic:2012}.
+SWAN takes a \Rcode{MethylSet} as input. This can be generated by either \Rcode{preprocessRaw} or
+\Rcode{preprocessIllumina}.  Calling the function without specifying a \Rcode{MethylSet} uses
+\Rcode{preprocessRaw}.
+
+<<preprocessSwan>>=
+Mset.swan <- preprocessSWAN(RGsetEx, MsetEx)
+@ 
+
+The technical differences between Infinium I and II assay designs can result in aberrant beta value
+distributions (Figure~\cite{fig:plotBetaTypes}, panel ``Raw''). Using SWAN corrects for the
+technical differences between the Infinium I and II assay designs and produces a smoother overall
+beta value distribution (Figure~\cite{fig:plotBetaTypes}, panel ``SWAN'').
+
+\begin{figure}
+  \centering
+<<plotBetaType,fig=TRUE,width=8,height=4>>=
+par(mfrow=c(1,2))
+plotBetasByType(MsetEx[,1], main = "Raw")
+plotBetasByType(Mset.swan[,1], main = "SWAN")
+@ 
+\caption{xx}\label{fig:plotBetaTypes}
+\end{figure}
 
 \section{Finding differentially methylated positions (DMPs)}
 
@@ -516,6 +544,16 @@ Marina Bibikova, Bret Barnes, Chan Tsan, Vincent Ho, Brandy Klotzle, Jennie M Le
 Zhang, Gary P Schroth, Kevin L Gunderson, Jian-Bing Fan, and Richard Shen,
 \emph{High density DNA methylation array with single CpG site resolution},
 Genomics 98, 288--295 (2011)
+\bibitem{Dedeurwaerder:2011}
+Sarah Dedeurwaerder, Matthieu Defrance, Emilie Calonne, H\'{e}l\`{e}ne Denis, Christos Sotiriou, and
+Fran\c{c}ois Fuks,
+\emph{Evaluation of the Infinium Methylation 450K technology},
+Epigenomics 3, 771-784 (2011).
+\bibitem{Makismovic:2012}
+Jovana Makismovic, Lavinia Gordon, and Alicia Oshlack,
+\emph{Subset quantile within-array normalization for Illumina Infinium HumanMethylation450
+  BeadChips},
+submitted.
 \end{thebibliography}
 \end{document}
 
